# mangoteka

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  ONBOARDING.md  README.md  docker-compose.yml  pyproject.toml
.playwright-mcp/: page-2026-05-22T09-50-32-328Z.yml
src/manga_in_ua_dl/: cli.py  converters.py  downloader.py  faust_scraper.py  scraper.py
src/manga_in_ua_dl/web/: __main__.py  app.py  jobs.py  library.py
src/manga_in_ua_dl/web/templates/: _job_status.html  base.html  chapters.html  index.html
src/mangoteka/: _http.py  cli.py  comick_scraper.py  converters.py  downloader.py  faust_scraper.py  mangadex_scraper.py  mangaplus_scraper.py  packager.py  scraper.py  search.py  webtoon_scraper.py
src/mangoteka/web/: __main__.py  app.py  jobs.py  library.py
src/mangoteka/web/static/: styles.css
src/mangoteka/web/templates/: _job_status.html  base.html  chapters.html  index.html  job.html  library_index.html  library_manga.html  search_results.html
tests/: test_comick_scraper.py  test_faust_search.py  test_parse_volume_chapter.py  test_volume_grouping.py
