[project]
name = "mangoteka"
version = "0.1.0"
description = "Downloader for manga.in.ua and faust-web.com → CBZ / PDF / EPUB / Kindle EPUB"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
    "tqdm>=4.66",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "img2pdf>=0.5",
    "pillow>=10.0",
    "aiofiles>=23.2",
    "aiosqlite>=0.20",
    "ebooklib>=0.18",
]

[project.scripts]
mangoteka     = "mangoteka.cli:cli"
mangoteka-web = "mangoteka.web.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
